# XMachOViewer

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  THANKS.md  build.pri  build_dpkg.sh  build_lin64.sh  build_mac.sh  build_msvc_win32.bat  build_msvc_win64.bat  build_msvc_winxp.bat  build_win32.bat  build_win64.bat  build_win_generic.cmd  changelog.txt  configure  configure.ac  create_appimage.sh  global.h  install.iss  install.sh  release_version.txt  xmachoviewer_source.pro
.github/workflows/: builder.yml
DEBIAN/: control  xmachoviewer.desktop
LINUX/: xmachoviewer.desktop
doc/: BUILD.md  THANKS.md
docs/: BUILD.md  RUN.md
gui_source/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  gui_source.pro  gui_source_tr.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp  rsrc.qrc
gui_source/translation/: xmachoviewer_ar.ts  xmachoviewer_de.ts  xmachoviewer_es.ts  xmachoviewer_fr.ts  xmachoviewer_he.ts  xmachoviewer_id.ts  xmachoviewer_it.ts  xmachoviewer_ja.ts  xmachoviewer_ko.ts  xmachoviewer_pl.ts  xmachoviewer_pt.ts  xmachoviewer_pt_BR.ts  xmachoviewer_pt_PT.ts  xmachoviewer_ru.ts  xmachoviewer_tr.ts  xmachoviewer_uk.ts  xmachoviewer_vi.ts  xmachoviewer_zh.ts  xmachoviewer_zh_TW.ts
icons/: main.icns
res/: Info.plist  Info.plist.in  readme.txt  resource.rc  resource.rc.in  windows.manifest.xml
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  dialogabout.cpp  dialogabout.ui  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui
src/gui/translation/: xmachoviewer_ar_AR.ts  xmachoviewer_bn_BN.ts  xmachoviewer_de_DE.ts  xmachoviewer_es_ES.ts  xmachoviewer_fa_FA.ts  xmachoviewer_fr_FR.ts  xmachoviewer_he_IL.ts  xmachoviewer_id_ID.ts  xmachoviewer_it_IT.ts  xmachoviewer_ja_JP.ts  xmachoviewer_ko_KR.ts  xmachoviewer_pl_PL.ts  xmachoviewer_pt_BR.ts  xmachoviewer_pt_PT.ts  xmachoviewer_ru_RU.ts  xmachoviewer_sv_SE.ts  xmachoviewer_tr_TR.ts  xmachoviewer_uk_UA.ts  xmachoviewer_vi_VN.ts  xmachoviewer_zh_CN.ts  xmachoviewer_zh_TW.ts
